Horde_Token no longer uses PEAR_Errors

--- a/package.xml
+++ b/package.xml
@@ -26,7 +26,8 @@ http://pear.php.net/dtd/package-2.0.xsd">
   <api>beta</api>
  </stability>
  <license uri="http://www.gnu.org/copyleft/lesser.html">LGPL</license>
- <notes>* Initial Horde 4 package.
+ <notes>* Use exceptions, not PEAR_Errors.
+ * Initial Horde 4 package.
  </notes>
  <contents>
   <dir name="/">
@@ -49,6 +50,10 @@ http://pear.php.net/dtd/package-2.0.xsd">
    <pearinstaller>
     <min>1.5.0</min>
    </pearinstaller>
+   <package>
+    <name>Exception</name>
+    <channel>pear.horde.org</channel>
+   </package>
    <package>
     <name>Util</name>
     <channel>pear.horde.org</channel>
