--- a/package.xml
+++ b/package.xml
@@ -10,6 +10,12 @@
   <email>chuck@horde.org</email>
   <active>yes</active>
  </lead>
+ <lead>
+  <name>Gunnar Wrobel</name>
+  <user>wrobel</user>
+  <email>p@rdus.de</email>
+  <active>yes</active>
+ </lead>
  <date>2011-03-16</date>
  <time>18:19:54</time>
  <version>
