--- a/package.xml
+++ b/package.xml
@@ -16,8 +16,8 @@
   <email>p@rdus.de</email>
   <active>yes</active>
  </lead>
- <date>2011-03-16</date>
- <time>18:19:54</time>
+ <date>2011-03-22</date>
+ <time>21:56:19</time>
  <version>
   <release>1.0.0RC1</release>
   <api>1.0.0</api>
@@ -373,7 +373,7 @@
     <exclude>2.0.0</exclude>
    </package>
    <extension>
-     <name>hash</name>
+    <name>hash</name>
    </extension>
   </required>
   <optional>
@@ -590,6 +590,21 @@ Converted to package.xml 2.0 for pear.horde.org
    <license uri="http://www.gnu.org/copyleft/lesser.html">LGPL</license>
    <notes>
 * First beta release for Horde 4.
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>1.0.0RC1</release>
+    <api>1.0.0</api>
+   </version>
+   <stability>
+    <release>beta</release>
+    <api>beta</api>
+   </stability>
+   <date>2011-03-22</date>
+   <license uri="http://www.gnu.org/copyleft/lesser.html">LGPL</license>
+   <notes>
+* First release candidate for Horde 4.
    </notes>
   </release>
  </changelog>
