--- a/package.xml
+++ b/package.xml
@@ -16,8 +16,8 @@
   <email>p@rdus.de</email>
   <active>yes</active>
  </lead>
- <date>2011-03-29</date>
- <time>18:28:10</time>
+ <date>2011-04-05</date>
+ <time>23:37:29</time>
  <version>
   <release>1.0.0</release>
   <api>1.0.0</api>
@@ -625,14 +625,16 @@ Converted to package.xml 2.0 for pear.horde.org
   <release>
    <version>
     <release>1.0.0</release>
-    <api>1.0.0</api></version>
+    <api>1.0.0</api>
+   </version>
    <stability>
-    <release>beta</release>
-    <api>beta</api></stability>
-   <date>2011-03-29</date>
+    <release>stable</release>
+    <api>stable</api>
+   </stability>
+   <date>2011-04-05</date>
    <license uri="http://www.gnu.org/copyleft/lesser.html">LGPL</license>
    <notes>
-* 
+* First stable release for Horde 4.
    </notes>
   </release>
  </changelog>
