--- a/package.xml
+++ b/package.xml
@@ -16,8 +16,8 @@
   <email>p@rdus.de</email>
   <active>yes</active>
  </lead>
- <date>2011-05-18</date>
- <time>14:52:18</time>
+ <date>2011-06-01</date>
+ <time>15:36:47</time>
  <version>
   <release>1.0.2</release>
   <api>1.0.0</api>
@@ -657,10 +657,10 @@ Converted to package.xml 2.0 for pear.horde.org
    <stability>
     <release>stable</release>
     <api>stable</api></stability>
-   <date>2011-05-18</date>
+   <date>2011-06-01</date>
    <license uri="http://www.gnu.org/copyleft/lesser.html">LGPL</license>
    <notes>
-* 
+* [jan] Updated Slovak translation.
    </notes>
   </release>
  </changelog>
