[gwr] Allow to specify a custom timeout or to disable it completely when validating tokens.

--- a/package.xml
+++ b/package.xml
@@ -19,7 +19,7 @@
  <date>2011-06-01</date>
  <time>15:37:13</time>
  <version>
-  <release>1.0.3</release>
+  <release>1.1.0</release>
   <api>1.0.0</api>
  </version>
  <stability>
@@ -28,7 +28,7 @@
  </stability>
  <license uri="http://www.gnu.org/copyleft/lesser.html">LGPL</license>
  <notes>
-* 
+* [gwr] Allow to specify a custom timeout or to disable it completely when validating tokens.
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -665,7 +665,7 @@ Converted to package.xml 2.0 for pear.horde.org
   </release>
   <release>
    <version>
-    <release>1.0.3</release>
+    <release>1.1.0</release>
     <api>1.0.0</api></version>
    <stability>
     <release>stable</release>
@@ -673,7 +673,7 @@ Converted to package.xml 2.0 for pear.horde.org
    <date>2011-06-01</date>
    <license uri="http://www.gnu.org/copyleft/lesser.html">LGPL</license>
    <notes>
-* 
+* [gwr] Allow to specify a custom timeout or to disable it completely when validating tokens.
    </notes>
   </release>
  </changelog>
