--- a/package.xml
+++ b/package.xml
@@ -16,8 +16,8 @@
   <email>p@rdus.de</email>
   <active>yes</active>
  </lead>
- <date>2011-06-01</date>
- <time>15:37:13</time>
+ <date>2011-07-27</date>
+ <time>16:52:09</time>
  <version>
   <release>1.1.0</release>
   <api>1.0.0</api>
@@ -673,11 +673,13 @@ Converted to package.xml 2.0 for pear.horde.org
    <stability>
     <release>stable</release>
     <api>stable</api></stability>
-   <date>2011-06-01</date>
+   <date>2011-07-27</date>
    <license uri="http://www.gnu.org/copyleft/lesser.html">LGPL</license>
    <notes>
 * [jan] Update Latvian translation.
 * [gwr] Allow to specify a custom timeout or to disable it completely when validating tokens.
+* [jan] Update Lithuanian translation.
+* [jan] Update Brazilian Portuguese translation.
    </notes>
   </release>
  </changelog>
