--- a/package.xml
+++ b/package.xml
@@ -28,7 +28,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
  <notes>
-* 
+* [jan] Allow to run unit tests from installed package.
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -689,7 +689,7 @@ Converted to package.xml 2.0 for pear.horde.org
    <date>2011-07-27</date>
    <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
    <notes>
-* 
+* [jan] Allow to run unit tests from installed package.
    </notes>
   </release>
  </changelog>
