--- a/package.xml
+++ b/package.xml
@@ -28,7 +28,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
  <notes>
-* 
+* [jan] Update Estonian translation.
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -724,7 +724,7 @@ Converted to package.xml 2.0 for pear.horde.org
    <date>2011-11-08</date>
    <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
    <notes>
-* 
+* [jan] Update Estonian translation.
    </notes>
   </release>
  </changelog>
