Development mode for Horde_Token-1.1.6

--- a/package.xml
+++ b/package.xml
@@ -17,9 +17,9 @@
   <active>yes</active>
  </lead>
  <date>2012-02-22</date>
- <time>13:43:28</time>
+ <time>13:43:42</time>
  <version>
-  <release>1.1.5</release>
+  <release>1.1.6</release>
   <api>1.0.0</api>
  </version>
  <stability>
@@ -28,8 +28,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
  <notes>
-* [jan] Updated German translation.
-* [jan] Updated Spanish translation.
+* 
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -753,6 +752,19 @@ Converted to package.xml 2.0 for pear.horde.org
    <notes>
 * [jan] Updated German translation.
 * [jan] Updated Spanish translation.
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>1.1.6</release>
+    <api>1.0.0</api></version>
+   <stability>
+    <release>stable</release>
+    <api>stable</api></stability>
+   <date>2012-02-22</date>
+   <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
+   <notes>
+* 
    </notes>
   </release>
  </changelog>
