--- a/package.xml
+++ b/package.xml
@@ -28,7 +28,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
  <notes>
-* 
+* [jan] Update Brazilian Portuguese translation (Luis Felipe Marzagao &lt;duli@easylifeproject.org&gt;).
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -777,7 +777,7 @@ Converted to package.xml 2.0 for pear.horde.org
    <date>2012-03-20</date>
    <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
    <notes>
-* 
+* [jan] Update Brazilian Portuguese translation (Luis Felipe Marzagao &lt;duli@easylifeproject.org&gt;).
    </notes>
   </release>
  </changelog>
