--- a/package.xml
+++ b/package.xml
@@ -750,8 +750,8 @@ Converted to package.xml 2.0 for pear.horde.org
    <date>2012-02-22</date>
    <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
    <notes>
-* [jan] Updated German translation.
-* [jan] Updated Spanish translation.
+* [jan] Update German translation.
+* [jan] Update Spanish translation.
    </notes>
   </release>
   <release>
