--- a/package.xml
+++ b/package.xml
@@ -16,19 +16,19 @@
   <email>p@rdus.de</email>
   <active>yes</active>
  </lead>
- <date>2012-04-10</date>
- <time>19:52:24</time>
+ <date>2012-07-05</date>
+ <time>22:17:41</time>
  <version>
-  <release>1.1.8</release>
+  <release>2.0.0alpha1</release>
   <api>1.0.0</api>
  </version>
  <stability>
-  <release>stable</release>
+  <release>alpha</release>
   <api>stable</api>
  </stability>
  <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
  <notes>
-* 
+* First alpha release for Horde 5.
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -782,15 +782,15 @@ Converted to package.xml 2.0 for pear.horde.org
   </release>
   <release>
    <version>
-    <release>1.1.8</release>
+    <release>2.0.0alpha1</release>
     <api>1.0.0</api></version>
    <stability>
-    <release>stable</release>
+    <release>alpha</release>
     <api>stable</api></stability>
-   <date>2012-04-10</date>
+   <date>2012-07-05</date>
    <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
    <notes>
-* 
+* First alpha release for Horde 5.
    </notes>
   </release>
  </changelog>
