--- a/package.xml
+++ b/package.xml
@@ -16,8 +16,7 @@
   <email>p@rdus.de</email>
   <active>yes</active>
  </lead>
- <date>2013-05-06</date>
- <time>19:30:58</time>
+ <date>2014-05-21</date>
  <version>
   <release>2.0.5</release>
   <api>1.0.0</api>
@@ -28,7 +27,8 @@
  </stability>
  <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
  <notes>
-* 
+* [jan] Update Hungarian translation (Andras Galos &lt;galosa@netinform.hu&gt;).
+* [jan] Update Danish translation (Erling Preben Hansen &lt;erling@eph.dk&gt;).
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -902,10 +902,11 @@ Converted to package.xml 2.0 for pear.horde.org
    <stability>
     <release>stable</release>
     <api>stable</api></stability>
-   <date>2013-05-06</date>
+   <date>2014-05-21</date>
    <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
    <notes>
-* 
+* [jan] Update Hungarian translation (Andras Galos &lt;galosa@netinform.hu&gt;).
+* [jan] Update Danish translation (Erling Preben Hansen &lt;erling@eph.dk&gt;).
    </notes>
   </release>
  </changelog>
