--- a/package.xml
+++ b/package.xml
@@ -18,7 +18,7 @@
  </lead>
  <date>2014-05-21</date>
  <version>
-  <release>2.0.5</release>
+  <release>2.0.6</release>
   <api>1.0.0</api>
  </version>
  <stability>
@@ -27,8 +27,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
  <notes>
-* [jan] Update Hungarian translation (Andras Galos &lt;galosa@netinform.hu&gt;).
-* [jan] Update Danish translation (Erling Preben Hansen &lt;erling@eph.dk&gt;).
+* 
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -907,6 +906,19 @@ Converted to package.xml 2.0 for pear.horde.org
    <notes>
 * [jan] Update Hungarian translation (Andras Galos &lt;galosa@netinform.hu&gt;).
 * [jan] Update Danish translation (Erling Preben Hansen &lt;erling@eph.dk&gt;).
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>2.0.6</release>
+    <api>1.0.0</api></version>
+   <stability>
+    <release>stable</release>
+    <api>stable</api></stability>
+   <date>2014-05-21</date>
+   <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
+   <notes>
+* 
    </notes>
   </release>
  </changelog>
