--- a/package.xml
+++ b/package.xml
@@ -16,7 +16,7 @@
   <email>p@rdus.de</email>
   <active>yes</active>
  </lead>
- <date>2014-10-21</date>
+ <date>2015-01-09</date>
  <version>
   <release>2.0.6</release>
   <api>1.0.0</api>
@@ -27,7 +27,8 @@
  </stability>
  <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
  <notes>
-* 
+* [jan] Support loading translations from Composer-installed package.
+* [jan] Improve PSR-2 compatibility.
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -907,10 +908,11 @@ Converted to package.xml 2.0 for pear.horde.org
    <stability>
     <release>stable</release>
     <api>stable</api></stability>
-   <date>2014-10-21</date>
+   <date>2015-01-09</date>
    <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
    <notes>
-* 
+* [jan] Support loading translations from Composer-installed package.
+* [jan] Improve PSR-2 compatibility.
    </notes>
   </release>
  </changelog>
