--- a/package.xml
+++ b/package.xml
@@ -27,7 +27,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
  <notes>
-* 
+* [jan] Catch possible exceptions in shutdown methods.
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -924,7 +924,7 @@ Converted to package.xml 2.0 for pear.horde.org
    <date>2015-01-09</date>
    <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
    <notes>
-* 
+* [jan] Catch possible exceptions in shutdown methods.
    </notes>
   </release>
  </changelog>
