--- a/doc/horde.yml
+++ b/doc/horde.yml
@@ -1,7 +1,7 @@
 ---
 id: Token
 name: Token
-full: Horde Token API
+full: Tokens library
 description: |
   The Horde_Token:: class provides a common abstracted interface into the various token generation mediums. It also includes all of the functions for retrieving, storing, and checking tokens.
 list: dev
