--- a/composer.json
+++ b/composer.json
@@ -16,25 +16,25 @@
             "role": "lead"
         }
     ],
-    "version": "2.0.9",
+    "version": "2.0.10",
     "time": "2016-03-21",
     "repositories": [
         {
             "type": "pear",
-            "url": "https://pear.horde.org"
+            "url": "http://pear.horde.org"
         }
     ],
     "require": {
-        "php": ">=5.3.0,<=8.0.0alpha1",
-        "pear-pear.horde.org/Horde_Exception": ">=2.0.0@stable,<=3.0.0alpha1@stable",
-        "pear-pear.horde.org/Horde_Translation": ">=2.2.0@stable,<=3.0.0alpha1@stable",
-        "pear-pear.horde.org/Horde_Url": ">=2.0.0@stable,<=3.0.0alpha1@stable",
-        "pear-pear.horde.org/Horde_Util": ">=2.0.0@stable,<=3.0.0alpha1@stable",
+        "php": "^5.3,<8",
+        "pear-pear.horde.org/Horde_Exception": "^2@stable",
+        "pear-pear.horde.org/Horde_Translation": "^2.2@stable",
+        "pear-pear.horde.org/Horde_Url": "^2@stable",
+        "pear-pear.horde.org/Horde_Util": "^2@stable",
         "ext-hash": "*"
     },
     "suggest": {
-        "pear-pear.horde.org/Horde_Db": ">=2.0.0@stable,<=3.0.0alpha1@stable",
-        "pear-pear.horde.org/Horde_Mongo": ">=1.0.0@stable,<=2.0.0alpha1@stable",
-        "pear-pear.horde.org/Horde_Test": ">=2.1.0@stable,<=3.0.0alpha1@stable"
+        "pear-pear.horde.org/Horde_Db": "^2@stable",
+        "pear-pear.horde.org/Horde_Mongo": "^1@stable",
+        "pear-pear.horde.org/Horde_Test": "^2.1@stable"
     }
 }
