--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         }
     ],
     "require": {
-        "php": "^5.3,<8",
+        "php": "^5.3 || ^7",
         "pear-pear.horde.org/Horde_Exception": "^2@stable",
         "pear-pear.horde.org/Horde_Translation": "^2.2@stable",
         "pear-pear.horde.org/Horde_Url": "^2@stable",
@@ -36,5 +36,14 @@
         "pear-pear.horde.org/Horde_Db": "^2@stable",
         "pear-pear.horde.org/Horde_Mongo": "^1@stable",
         "pear-pear.horde.org/Horde_Test": "^2.1@stable"
+    },
+    "replace": {
+        "pear-pear.horde.org/Horde_Token": "2.*",
+        "pear-horde/Horde_Token": "2.*"
+    },
+    "autoload": {
+        "psr-0": {
+            "Horde_Token": "lib/"
+        }
     }
 }
