--- a/.horde.yml
+++ b/.horde.yml
@@ -5,3 +5,4 @@ full: Tokens library
 description: |
   The Horde_Token:: class provides a common abstracted interface into the various token generation mediums. It also includes all of the functions for retrieving, storing, and checking tokens.
 list: dev
+type: library
