--- a/.horde.yml
+++ b/.horde.yml
@@ -6,3 +6,41 @@ description: |
   The Horde_Token:: class provides a common abstracted interface into the various token generation mediums. It also includes all of the functions for retrieving, storing, and checking tokens.
 list: dev
 type: library
+homepage: https://www.horde.org/libraries/Horde_Token
+authors:
+  -
+    name: Chuck Hagenbuch
+    user: chuck
+    email: chuck@horde.org
+    active: true
+    role: lead
+  -
+    name: Gunnar Wrobel
+    user: wrobel
+    email: p@rdus.de
+    active: true
+    role: lead
+version:
+  release: 2.0.10
+  api: 1.0.0
+state:
+  release: stable
+  api: stable
+license:
+  identifier: LGPL-2.1
+  uri: http://www.horde.org/licenses/lgpl21
+dependencies:
+  required:
+    php: ^5.3 || ^7
+    pear:
+      pear.horde.org/Horde_Exception: ^2
+      pear.horde.org/Horde_Translation: ^2.2
+      pear.horde.org/Horde_Url: ^2
+      pear.horde.org/Horde_Util: ^2
+    ext:
+      hash: '*'
+  optional:
+    pear:
+      pear.horde.org/Horde_Db: ^2
+      pear.horde.org/Horde_Mongo: ^1
+      pear.horde.org/Horde_Test: ^2.1
