--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "horde/horde-token",
+    "name": "horde/token",
     "description": "Horde Token API",
     "type": "library",
     "homepage": "https://pear.horde.org",
@@ -26,16 +26,16 @@
     ],
     "require": {
         "php": "^5.3 || ^7",
-        "pear-pear.horde.org/Horde_Exception": "^2@stable",
-        "pear-pear.horde.org/Horde_Translation": "^2.2@stable",
-        "pear-pear.horde.org/Horde_Url": "^2@stable",
-        "pear-pear.horde.org/Horde_Util": "^2@stable",
+        "pear-pear.horde.org/Horde_Exception": "^2",
+        "pear-pear.horde.org/Horde_Translation": "^2.2",
+        "pear-pear.horde.org/Horde_Url": "^2",
+        "pear-pear.horde.org/Horde_Util": "^2",
         "ext-hash": "*"
     },
     "suggest": {
-        "pear-pear.horde.org/Horde_Db": "^2@stable",
-        "pear-pear.horde.org/Horde_Mongo": "^1@stable",
-        "pear-pear.horde.org/Horde_Test": "^2.1@stable"
+        "pear-pear.horde.org/Horde_Db": "^2",
+        "pear-pear.horde.org/Horde_Mongo": "^1",
+        "pear-pear.horde.org/Horde_Test": "^2.1"
     },
     "replace": {
         "pear-pear.horde.org/Horde_Token": "2.*",
