--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
     "name": "horde/token",
-    "description": "Horde Token API",
+    "description": "Tokens library",
     "type": "library",
-    "homepage": "https://pear.horde.org",
+    "homepage": "https://www.horde.org/libraries/Horde_Token",
     "license": "LGPL-2.1",
     "authors": [
         {
@@ -17,7 +17,7 @@
         }
     ],
     "version": "2.0.10",
-    "time": "2017-10-20",
+    "time": "2017-11-11",
     "repositories": [
         {
             "type": "pear",
