--- a/composer.json
+++ b/composer.json
@@ -1,49 +1,49 @@
 {
     "name": "horde/token",
     "description": "Tokens library",
-    "type": "library",
+    "type": "horde-library",
     "homepage": "https://www.horde.org/libraries/Horde_Token",
     "license": "LGPL-2.1",
     "authors": [
         {
-            "name": "Chuck Hagenbuch",
-            "email": "chuck@horde.org",
-            "role": "lead"
-        },
-        {
             "name": "Gunnar Wrobel",
             "email": "p@rdus.de",
             "role": "lead"
+        },
+        {
+            "name": "Chuck Hagenbuch",
+            "email": "chuck@horde.org",
+            "role": "lead"
         }
     ],
-    "version": "2.0.10",
-    "time": "2017-11-11",
+    "version": "3.0.0alpha1",
+    "time": "2021-02-24",
     "repositories": [
         {
-            "type": "pear",
-            "url": "https://pear.horde.org"
+            "type": "composer",
+            "url": "https://horde-satis.maintaina.com/"
         }
     ],
     "require": {
+        "horde/horde-installer-plugin": "*",
         "php": "^5.3 || ^7",
-        "pear-pear.horde.org/Horde_Exception": "^2",
-        "pear-pear.horde.org/Horde_Translation": "^2.2",
-        "pear-pear.horde.org/Horde_Url": "^2",
-        "pear-pear.horde.org/Horde_Util": "^2",
+        "horde/exception": "^2",
+        "horde/translation": "^2.2",
+        "horde/url": "^2",
+        "horde/util": "^2",
         "ext-hash": "*"
     },
     "suggest": {
-        "pear-pear.horde.org/Horde_Db": "^2",
-        "pear-pear.horde.org/Horde_Mongo": "^1",
-        "pear-pear.horde.org/Horde_Test": "^2.1"
-    },
-    "replace": {
-        "pear-pear.horde.org/Horde_Token": "2.*",
-        "pear-horde/Horde_Token": "2.*"
+        "horde/db": "^2",
+        "horde/mongo": "^1",
+        "horde/test": "^2.1"
     },
     "autoload": {
         "psr-0": {
             "Horde_Token": "lib/"
+        },
+        "psr-4": {
+            "Horde\\Token\\": "src/"
         }
     }
 }
